--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -29,6 +29,9 @@ body {
     border: 2px solid #064420;
     transition: 0.6s;
 }
+.home-started {
+    margin-top: 100px;
+}
 .navbar {
     background-color: #e4efe7;
     height: 80px;
